# kodios

./: Cargo.toml  README.md  flake.nix  riscv64-kodios.json  rust-toolchain.toml  x86_64-kodios.json
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  logo.txt  main.rs  memory.rs  serial.rs  task.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
