[package]
name = "kodios"
version = "0.1.0"
edition = "2024"
authors = ["Anders C. Sørby <anders@sorby.xyz>"]

[dependencies]
# bootloader = "0.11.12"
bootloader = { version = "0.9", features = ["map_physical_memory"] }
linked_list_allocator = { version = "0.9.0", optional = true }
spin = "0.10.0"
volatile = "0.2.6"
uart_16550 = "0.2.0"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"

[features]
default = ["ext_linked_list_allocator"]
fsb_allocator = ["dep:linked_list_allocator"]
linked_list_allocator = []
ext_linked_list_allocator = ["dep:linked_list_allocator"]
bump_allocator = []

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv64 = "0.0.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15.2"

[[bin]]
name = "kodios"
test = true
bench = false

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
run-args = ["-serial", "stdio"]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33
test-timeout = 300 # (in seconds)
